--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@albgen/capacitor-escpos-plugin",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Send high level print commands to ESC/POS Printers",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
@@ -44,21 +44,25 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@capacitor/android": "^5.0.0",
-    "@capacitor/cli": "^5.6.0",
-    "@capacitor/core": "^5.0.0",
-    "@capacitor/docgen": "^0.0.18",
-    "@capacitor/ios": "^5.0.0",
-    "@ionic/eslint-config": "^0.3.0",
-    "@ionic/prettier-config": "^1.0.1",
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/cli": "^6.0.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/docgen": "^0.2.2",
+    "@capacitor/ios": "^6.0.0",
+    "@ionic/eslint-config": "^0.4.0",
+    "@ionic/prettier-config": "^4.0.0",
     "@ionic/swiftlint-config": "^1.1.2",
-    "eslint": "^7.11.0",
-    "prettier": "~2.3.0",
-    "prettier-plugin-java": "~1.0.2",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.32.0",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.30.0",
+    "eslint-scope": "^8.0.2",
+    "eslint-visitor-keys": "^4.0.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-java": "^2.6.4",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.21.2",
     "swiftlint": "^1.0.1",
-    "typescript": "~4.1.5"
+    "typescript": "^5.5.4"
   },
   "peerDependencies": {
     "@capacitor/core": "^5.0.0"
@@ -78,16 +82,17 @@
   },
   "homepage": "https://github.com/albgen/capacitor-escpos-plugin.git#readme",
   "dependencies": {
-    "acorn": "^7.4.1",
+    "@types/node": "^22.5.4",
+    "acorn": "^8.12.1",
     "acorn-jsx": "^5.3.2",
-    "ajv": "^6.12.6",
+    "ajv": "^8.17.1",
     "ansi-colors": "^4.1.3",
-    "ansi-regex": "^5.0.1",
-    "ansi-styles": "^4.3.0",
-    "argparse": "^1.0.10",
+    "ansi-regex": "^6.0.1",
+    "ansi-styles": "^6.2.1",
+    "argparse": "^2.0.1",
     "array-buffer-byte-length": "^1.0.0",
     "array-includes": "^3.1.7",
-    "array-union": "^2.1.0",
+    "array-union": "^3.0.1",
     "array.prototype.findlastindex": "^1.2.3",
     "array.prototype.flat": "^1.3.2",
     "array.prototype.flatmap": "^1.3.2",
@@ -95,86 +100,82 @@
     "astral-regex": "^2.0.0",
     "at-least-node": "^1.0.0",
     "available-typed-arrays": "^1.0.5",
-    "balanced-match": "^1.0.2",
+    "balanced-match": "^3.0.1",
     "base64-js": "^1.5.1",
     "big-integer": "^1.6.52",
     "bplist-parser": "^0.3.2",
-    "brace-expansion": "^1.1.11",
+    "brace-expansion": "^4.0.0",
     "braces": "^3.0.2",
-    "buffer-crc32": "^0.2.13",
+    "buffer-crc32": "^1.0.0",
     "call-bind": "^1.0.5",
-    "callsites": "^3.1.0",
-    "chalk": "^4.1.2",
-    "chevrotain": "^6.5.0",
-    "chownr": "^2.0.0",
+    "callsites": "^4.2.0",
+    "chalk": "^5.3.0",
+    "chevrotain": "^11.0.3",
+    "chownr": "^3.0.0",
     "color-convert": "^2.0.1",
-    "color-name": "^1.1.4",
-    "colorette": "^1.4.0",
-    "commander": "^9.5.0",
-    "concat-map": "^0.0.1",
-    "cosmiconfig": "^6.0.0",
+    "color-name": "^2.0.0",
+    "colorette": "^2.0.20",
+    "commander": "^12.1.0",
+    "concat-map": "^0.0.2",
+    "cosmiconfig": "^9.0.0",
     "cross-spawn": "^7.0.3",
     "debug": "^4.3.4",
     "deep-is": "^0.1.4",
     "define-data-property": "^1.1.1",
-    "define-lazy-prop": "^2.0.0",
+    "define-lazy-prop": "^3.0.0",
     "define-properties": "^1.2.1",
     "dir-glob": "^3.0.1",
     "doctrine": "^3.0.0",
     "elementtree": "^0.1.7",
-    "emoji-regex": "^8.0.0",
+    "emoji-regex": "^10.4.0",
     "enquirer": "^2.4.1",
-    "env-paths": "^2.2.1",
+    "env-paths": "^3.0.0",
     "error-ex": "^1.3.2",
     "es-abstract": "^1.22.3",
     "es-set-tostringtag": "^2.0.2",
     "es-shim-unscopables": "^1.0.2",
     "es-to-primitive": "^1.2.1",
-    "escape-string-regexp": "^4.0.0",
-    "eslint-config-prettier": "^6.15.0",
+    "escape-string-regexp": "^5.0.0",
     "eslint-import-resolver-node": "^0.3.9",
     "eslint-module-utils": "^2.8.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-scope": "^5.1.1",
     "eslint-utils": "^3.0.0",
-    "eslint-visitor-keys": "^2.1.0",
-    "espree": "^7.3.1",
+    "espree": "^10.1.0",
     "esprima": "^4.0.1",
     "esquery": "^1.5.0",
     "esrecurse": "^4.3.0",
-    "estraverse": "^4.3.0",
+    "estraverse": "^5.3.0",
     "esutils": "^2.0.3",
     "fast-deep-equal": "^3.1.3",
     "fast-glob": "^3.3.2",
     "fast-json-stable-stringify": "^2.1.0",
-    "fast-levenshtein": "^2.0.6",
+    "fast-levenshtein": "^3.0.0",
     "fastq": "^1.15.0",
     "fd-slicer": "^1.1.0",
-    "file-entry-cache": "^6.0.1",
+    "file-entry-cache": "^9.1.0",
     "fill-range": "^7.0.1",
-    "flat-cache": "^3.2.0",
+    "flat-cache": "^5.0.0",
     "flatted": "^3.2.9",
     "for-each": "^0.3.3",
-    "fs-extra": "^9.1.0",
-    "fs-minipass": "^2.1.0",
+    "fs-extra": "^11.2.0",
+    "fs-minipass": "^3.0.3",
     "fs.realpath": "^1.0.0",
     "function-bind": "^1.1.2",
     "function.prototype.name": "^1.1.6",
     "functional-red-black-tree": "^1.0.1",
     "functions-have-names": "^1.2.3",
     "get-intrinsic": "^1.2.2",
-    "get-stdin": "^6.0.0",
+    "get-stdin": "^9.0.0",
     "get-symbol-description": "^1.0.0",
-    "github-slugger": "^1.5.0",
-    "glob": "^7.2.3",
-    "glob-parent": "^5.1.2",
-    "globals": "^13.24.0",
+    "github-slugger": "^2.0.0",
+    "glob": "^11.0.0",
+    "glob-parent": "^6.0.2",
+    "globals": "^15.9.0",
     "globalthis": "^1.0.3",
-    "globby": "^11.1.0",
+    "globby": "^14.0.2",
     "gopd": "^1.0.1",
     "graceful-fs": "^4.2.11",
     "has-bigints": "^1.0.2",
-    "has-flag": "^4.0.0",
+    "has-flag": "^5.0.1",
     "has-property-descriptors": "^1.0.1",
     "has-proto": "^1.0.1",
     "has-symbols": "^1.0.3",
@@ -185,18 +186,18 @@
     "imurmurhash": "^0.1.4",
     "inflight": "^1.0.6",
     "inherits": "^2.0.4",
-    "ini": "^4.1.1",
+    "ini": "^5.0.0",
     "internal-slot": "^1.0.6",
     "is-array-buffer": "^3.0.2",
-    "is-arrayish": "^0.2.1",
+    "is-arrayish": "^0.3.2",
     "is-bigint": "^1.0.4",
     "is-boolean-object": "^1.1.2",
     "is-callable": "^1.2.7",
     "is-core-module": "^2.13.1",
     "is-date-object": "^1.0.5",
-    "is-docker": "^2.2.1",
+    "is-docker": "^3.0.0",
     "is-extglob": "^2.1.1",
-    "is-fullwidth-code-point": "^3.0.0",
+    "is-fullwidth-code-point": "^5.0.0",
     "is-glob": "^4.0.3",
     "is-negative-zero": "^2.0.2",
     "is-number": "^7.0.0",
@@ -207,33 +208,33 @@
     "is-symbol": "^1.0.4",
     "is-typed-array": "^1.1.12",
     "is-weakref": "^1.0.2",
-    "is-wsl": "^2.2.0",
+    "is-wsl": "^3.1.0",
     "isarray": "^2.0.5",
-    "isexe": "^2.0.0",
-    "java-parser": "^1.0.2",
-    "js-tokens": "^4.0.0",
-    "js-yaml": "^3.14.1",
+    "isexe": "^3.1.1",
+    "java-parser": "^2.3.2",
+    "js-tokens": "^9.0.0",
+    "js-yaml": "^4.1.0",
     "json-buffer": "^3.0.1",
-    "json-parse-even-better-errors": "^2.3.1",
-    "json-schema-traverse": "^0.4.1",
+    "json-parse-even-better-errors": "^4.0.0",
+    "json-schema-traverse": "^1.0.0",
     "json-stable-stringify-without-jsonify": "^1.0.1",
-    "json5": "^1.0.2",
+    "json5": "^2.2.3",
     "jsonfile": "^6.1.0",
-    "keyv": "^4.5.4",
+    "keyv": "^5.0.1",
     "kleur": "^4.1.5",
     "levn": "^0.4.1",
-    "lines-and-columns": "^1.2.4",
+    "lines-and-columns": "^2.0.4",
     "lodash": "^4.17.21",
     "lodash.merge": "^4.6.2",
     "lodash.truncate": "^4.4.2",
-    "lru-cache": "^6.0.0",
+    "lru-cache": "^11.0.0",
     "merge2": "^1.4.1",
     "micromatch": "^4.0.5",
-    "minimatch": "^3.1.2",
+    "minimatch": "^10.0.1",
     "minimist": "^1.2.8",
-    "minipass": "^5.0.0",
-    "minizlib": "^2.1.2",
-    "mkdirp": "^1.0.4",
+    "minipass": "^7.1.2",
+    "minizlib": "^3.0.1",
+    "mkdirp": "^3.0.1",
     "ms": "^2.1.2",
     "native-run": "^2.0.0",
     "natural-compare": "^1.4.0",
@@ -244,30 +245,30 @@
     "object.groupby": "^1.0.1",
     "object.values": "^1.1.7",
     "once": "^1.4.0",
-    "open": "^8.4.2",
+    "open": "^10.1.0",
     "optionator": "^0.9.3",
-    "parent-module": "^1.0.1",
-    "parse-json": "^5.2.0",
-    "path-is-absolute": "^1.0.1",
-    "path-key": "^3.1.1",
+    "parent-module": "^3.1.0",
+    "parse-json": "^8.1.0",
+    "path-is-absolute": "^2.0.0",
+    "path-key": "^4.0.0",
     "path-parse": "^1.0.7",
-    "path-scurry": "^1.10.1",
-    "path-type": "^4.0.0",
+    "path-scurry": "^2.0.0",
+    "path-type": "^6.0.0",
     "pend": "^1.2.0",
-    "picomatch": "^2.3.1",
+    "picomatch": "^4.0.2",
     "plist": "^3.1.0",
     "prelude-ls": "^1.2.1",
     "progress": "^2.0.3",
     "prompts": "^2.4.2",
     "punycode": "^2.3.1",
     "queue-microtask": "^1.2.3",
-    "readable-stream": "^3.6.2",
-    "regexp-to-ast": "^0.4.0",
+    "readable-stream": "^4.5.2",
+    "regexp-to-ast": "^0.5.0",
     "regexp.prototype.flags": "^1.5.1",
     "regexpp": "^3.2.0",
     "require-from-string": "^2.0.2",
     "resolve": "^1.22.8",
-    "resolve-from": "^4.0.0",
+    "resolve-from": "^5.0.0",
     "reusify": "^1.0.4",
     "run-parallel": "^1.2.0",
     "safe-array-concat": "^1.0.1",
@@ -278,54 +279,54 @@
     "set-function-length": "^1.1.1",
     "set-function-name": "^2.0.1",
     "shebang-command": "^2.0.0",
-    "shebang-regex": "^3.0.0",
+    "shebang-regex": "^4.0.0",
     "side-channel": "^1.0.4",
-    "signal-exit": "^3.0.7",
+    "signal-exit": "^4.1.0",
     "sisteransi": "^1.0.5",
-    "slash": "^3.0.0",
-    "slice-ansi": "^4.0.0",
+    "slash": "^5.1.0",
+    "slice-ansi": "^7.1.0",
     "split2": "^4.2.0",
     "sprintf-js": "^1.0.3",
-    "string-width": "^4.2.3",
+    "string_decoder": "^1.3.0",
+    "string-width": "^7.2.0",
     "string.prototype.trim": "^1.2.8",
     "string.prototype.trimend": "^1.0.7",
     "string.prototype.trimstart": "^1.0.7",
-    "string_decoder": "^1.3.0",
-    "strip-ansi": "^6.0.1",
-    "strip-bom": "^3.0.0",
-    "strip-json-comments": "^3.1.1",
-    "supports-color": "^7.2.0",
+    "strip-ansi": "^7.1.0",
+    "strip-bom": "^5.0.0",
+    "strip-json-comments": "^5.0.1",
+    "supports-color": "^9.4.0",
     "supports-preserve-symlinks-flag": "^1.0.0",
     "table": "^6.8.1",
-    "tar": "^6.2.0",
+    "tar": "^7.4.3",
     "text-table": "^0.2.0",
     "through2": "^4.0.2",
     "to-regex-range": "^5.0.1",
     "tree-kill": "^1.2.2",
-    "tsconfig-paths": "^3.15.0",
+    "tsconfig-paths": "^4.2.0",
     "tslib": "^2.6.2",
     "tsutils": "^3.21.0",
     "type-check": "^0.4.0",
-    "type-fest": "^0.20.2",
+    "type-fest": "^4.26.0",
     "typed-array-buffer": "^1.0.0",
     "typed-array-byte-length": "^1.0.0",
     "typed-array-byte-offset": "^1.0.0",
     "typed-array-length": "^1.0.4",
     "unbox-primitive": "^1.0.2",
     "universalify": "^2.0.1",
-    "untildify": "^4.0.0",
+    "untildify": "^5.0.0",
     "uri-js": "^4.4.1",
     "util-deprecate": "^1.0.2",
     "v8-compile-cache": "^2.4.0",
-    "which": "^2.0.2",
+    "which": "^4.0.0",
     "which-boxed-primitive": "^1.0.2",
     "which-typed-array": "^1.1.13",
-    "wrap-ansi": "^7.0.0",
+    "wrap-ansi": "^9.0.0",
     "wrappy": "^1.0.2",
-    "xml2js": "^0.5.0",
+    "xml2js": "^0.6.2",
     "xmlbuilder": "^15.1.1",
-    "yallist": "^4.0.0",
-    "yaml": "^1.10.2",
-    "yauzl": "^2.10.0"
+    "yallist": "^5.0.0",
+    "yaml": "^2.5.0",
+    "yauzl": "^3.1.3"
   }
 }
