--- a/package.json
+++ b/package.json
@@ -81,245 +81,5 @@
       "src": "android"
     }
   },
-  "homepage": "https://github.com/albgen/capacitor-escpos-plugin.git#readme",
-  "dependencies": {
-    "@types/node": "^22.5.4",
-    "acorn": "^8.12.1",
-    "acorn-jsx": "^5.3.2",
-    "ajv": "^8.17.1",
-    "ansi-colors": "^4.1.3",
-    "ansi-regex": "^6.0.1",
-    "ansi-styles": "^6.2.1",
-    "array-buffer-byte-length": "^1.0.0",
-    "array-includes": "^3.1.7",
-    "array-union": "^3.0.1",
-    "array.prototype.findlastindex": "^1.2.3",
-    "array.prototype.flat": "^1.3.2",
-    "array.prototype.flatmap": "^1.3.2",
-    "arraybuffer.prototype.slice": "^1.0.2",
-    "astral-regex": "^2.0.0",
-    "at-least-node": "^1.0.0",
-    "available-typed-arrays": "^1.0.5",
-    "balanced-match": "^3.0.1",
-    "base64-js": "^1.5.1",
-    "big-integer": "^1.6.52",
-    "bplist-parser": "^0.3.2",
-    "brace-expansion": "^4.0.0",
-    "braces": "^3.0.2",
-    "buffer-crc32": "^1.0.0",
-    "call-bind": "^1.0.5",
-    "callsites": "^4.2.0",
-    "commander": "^12.1.0",
-    "concat-map": "^0.0.2",
-    "cosmiconfig": "^9.0.0",
-    "cross-spawn": "^7.0.3",
-    "debug": "^4.3.4",
-    "deep-is": "^0.1.4",
-    "define-data-property": "^1.1.1",
-    "define-lazy-prop": "^3.0.0",
-    "define-properties": "^1.2.1",
-    "dir-glob": "^3.0.1",
-    "doctrine": "^3.0.0",
-    "elementtree": "^0.1.7",
-    "emoji-regex": "^10.4.0",
-    "enquirer": "^2.4.1",
-    "env-paths": "^3.0.0",
-    "error-ex": "^1.3.2",
-    "es-abstract": "^1.22.3",
-    "es-set-tostringtag": "^2.0.2",
-    "es-shim-unscopables": "^1.0.2",
-    "es-to-primitive": "^1.2.1",
-    "escape-string-regexp": "^5.0.0",
-    "eslint-import-resolver-node": "^0.3.9",
-    "eslint-module-utils": "^2.8.0",
-    "eslint-utils": "^3.0.0",
-    "espree": "^10.1.0",
-    "esprima": "^4.0.1",
-    "esquery": "^1.5.0",
-    "esrecurse": "^4.3.0",
-    "estraverse": "^5.3.0",
-    "esutils": "^2.0.3",
-    "fast-deep-equal": "^3.1.3",
-    "fast-glob": "^3.3.2",
-    "fast-json-stable-stringify": "^2.1.0",
-    "fast-levenshtein": "^3.0.0",
-    "fastq": "^1.15.0",
-    "fd-slicer": "^1.1.0",
-    "file-entry-cache": "^9.1.0",
-    "fill-range": "^7.0.1",
-    "flat-cache": "^5.0.0",
-    "flatted": "^3.2.9",
-    "for-each": "^0.3.3",
-    "fs-extra": "^11.2.0",
-    "fs-minipass": "^3.0.3",
-    "fs.realpath": "^1.0.0",
-    "function-bind": "^1.1.2",
-    "function.prototype.name": "^1.1.6",
-    "functional-red-black-tree": "^1.0.1",
-    "functions-have-names": "^1.2.3",
-    "get-intrinsic": "^1.2.2",
-    "get-stdin": "^9.0.0",
-    "get-symbol-description": "^1.0.0",
-    "github-slugger": "^2.0.0",
-    "glob": "^11.0.0",
-    "glob-parent": "^6.0.2",
-    "globals": "^15.9.0",
-    "globalthis": "^1.0.3",
-    "globby": "^14.0.2",
-    "gopd": "^1.0.1",
-    "graceful-fs": "^4.2.11",
-    "has-bigints": "^1.0.2",
-    "has-flag": "^5.0.1",
-    "has-property-descriptors": "^1.0.1",
-    "has-proto": "^1.0.1",
-    "has-symbols": "^1.0.3",
-    "has-tostringtag": "^1.0.0",
-    "hasown": "^2.0.0",
-    "import-fresh": "^3.3.0",
-    "imurmurhash": "^0.1.4",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "ini": "^5.0.0",
-    "internal-slot": "^1.0.6",
-    "is-array-buffer": "^3.0.2",
-    "is-arrayish": "^0.3.2",
-    "is-bigint": "^1.0.4",
-    "is-boolean-object": "^1.1.2",
-    "is-callable": "^1.2.7",
-    "is-core-module": "^2.13.1",
-    "is-date-object": "^1.0.5",
-    "is-docker": "^3.0.0",
-    "is-extglob": "^2.1.1",
-    "is-fullwidth-code-point": "^5.0.0",
-    "is-glob": "^4.0.3",
-    "is-negative-zero": "^2.0.2",
-    "is-number": "^7.0.0",
-    "is-number-object": "^1.0.7",
-    "is-regex": "^1.1.4",
-    "is-shared-array-buffer": "^1.0.2",
-    "is-string": "^1.0.7",
-    "is-symbol": "^1.0.4",
-    "is-typed-array": "^1.1.12",
-    "is-weakref": "^1.0.2",
-    "is-wsl": "^3.1.0",
-    "isarray": "^2.0.5",
-    "isexe": "^3.1.1",
-    "java-parser": "^2.3.2",
-    "js-tokens": "^9.0.0",
-    "js-yaml": "^4.1.0",
-    "json-buffer": "^3.0.1",
-    "json-parse-even-better-errors": "^4.0.0",
-    "json-schema-traverse": "^1.0.0",
-    "json-stable-stringify-without-jsonify": "^1.0.1",
-    "json5": "^2.2.3",
-    "jsonfile": "^6.1.0",
-    "keyv": "^5.0.1",
-    "kleur": "^4.1.5",
-    "levn": "^0.4.1",
-    "lines-and-columns": "^2.0.4",
-    "lodash": "^4.17.21",
-    "lodash.merge": "^4.6.2",
-    "lodash.truncate": "^4.4.2",
-    "lru-cache": "^11.0.0",
-    "merge2": "^1.4.1",
-    "micromatch": "^4.0.5",
-    "minimatch": "^10.0.1",
-    "minimist": "^1.2.8",
-    "minipass": "^7.1.2",
-    "minizlib": "^3.0.1",
-    "mkdirp": "^3.0.1",
-    "ms": "^2.1.2",
-    "native-run": "^2.0.0",
-    "natural-compare": "^1.4.0",
-    "object-inspect": "^1.13.1",
-    "object-keys": "^1.1.1",
-    "object.assign": "^4.1.5",
-    "object.fromentries": "^2.0.7",
-    "object.groupby": "^1.0.1",
-    "object.values": "^1.1.7",
-    "once": "^1.4.0",
-    "open": "^10.1.0",
-    "optionator": "^0.9.3",
-    "parent-module": "^3.1.0",
-    "parse-json": "^8.1.0",
-    "path-is-absolute": "^2.0.0",
-    "path-key": "^4.0.0",
-    "path-parse": "^1.0.7",
-    "path-scurry": "^2.0.0",
-    "path-type": "^6.0.0",
-    "pend": "^1.2.0",
-    "picomatch": "^4.0.2",
-    "plist": "^3.1.0",
-    "prelude-ls": "^1.2.1",
-    "progress": "^2.0.3",
-    "prompts": "^2.4.2",
-    "punycode": "^2.3.1",
-    "queue-microtask": "^1.2.3",
-    "readable-stream": "^4.5.2",
-    "regexp-to-ast": "^0.5.0",
-    "regexp.prototype.flags": "^1.5.1",
-    "regexpp": "^3.2.0",
-    "require-from-string": "^2.0.2",
-    "resolve": "^1.22.8",
-    "resolve-from": "^5.0.0",
-    "reusify": "^1.0.4",
-    "run-parallel": "^1.2.0",
-    "safe-array-concat": "^1.0.1",
-    "safe-buffer": "^5.2.1",
-    "safe-regex-test": "^1.0.0",
-    "sax": "^1.1.4",
-    "semver": "^7.5.4",
-    "set-function-length": "^1.1.1",
-    "set-function-name": "^2.0.1",
-    "shebang-command": "^2.0.0",
-    "shebang-regex": "^4.0.0",
-    "side-channel": "^1.0.4",
-    "signal-exit": "^4.1.0",
-    "sisteransi": "^1.0.5",
-    "slash": "^5.1.0",
-    "slice-ansi": "^7.1.0",
-    "split2": "^4.2.0",
-    "sprintf-js": "^1.0.3",
-    "string_decoder": "^1.3.0",
-    "string-width": "^7.2.0",
-    "string.prototype.trim": "^1.2.8",
-    "string.prototype.trimend": "^1.0.7",
-    "string.prototype.trimstart": "^1.0.7",
-    "strip-ansi": "^7.1.0",
-    "strip-bom": "^5.0.0",
-    "strip-json-comments": "^5.0.1",
-    "supports-color": "^9.4.0",
-    "supports-preserve-symlinks-flag": "^1.0.0",
-    "table": "^6.8.1",
-    "tar": "^7.4.3",
-    "text-table": "^0.2.0",
-    "through2": "^4.0.2",
-    "to-regex-range": "^5.0.1",
-    "tree-kill": "^1.2.2",
-    "tsconfig-paths": "^4.2.0",
-    "tslib": "^2.6.2",
-    "tsutils": "^3.21.0",
-    "type-check": "^0.4.0",
-    "type-fest": "^4.26.0",
-    "typed-array-buffer": "^1.0.0",
-    "typed-array-byte-length": "^1.0.0",
-    "typed-array-byte-offset": "^1.0.0",
-    "typed-array-length": "^1.0.4",
-    "unbox-primitive": "^1.0.2",
-    "universalify": "^2.0.1",
-    "untildify": "^5.0.0",
-    "uri-js": "^4.4.1",
-    "util-deprecate": "^1.0.2",
-    "v8-compile-cache": "^2.4.0",
-    "which": "^4.0.0",
-    "which-boxed-primitive": "^1.0.2",
-    "which-typed-array": "^1.1.13",
-    "wrap-ansi": "^9.0.0",
-    "wrappy": "^1.0.2",
-    "xml2js": "^0.6.2",
-    "xmlbuilder": "^15.1.1",
-    "yallist": "^5.0.0",
-    "yaml": "^2.5.0",
-    "yauzl": "^3.1.3"
-  }
+  "homepage": "https://github.com/albgen/capacitor-escpos-plugin.git#readme"
 }
