attempt to fix build when using the plugin
instead of adding allprojects {
    repositories {
        google()
        mavenCentral()
		maven { url 'https://jitpack.io' }
    }
}

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,9 +9,18 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.0.0'
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }  // Ensure JitPack is included for all projects
     }
 }
 
@@ -19,7 +28,7 @@ apply plugin: 'com.android.library'
 
 android {
     namespace "com.albgen.plugins.escposplugincap"
-    compileSdkVersion project.hasProperty('compileSdkVersion') ? rootProject.ext.compileSdkVersion : 33
+    compileSdkVersion project.hasProperty('compileSdkVersion') ? rootProject.ext.compileSdkVersion : 34
     defaultConfig {
         minSdkVersion project.hasProperty('minSdkVersion') ? rootProject.ext.minSdkVersion : 22
         targetSdkVersion project.hasProperty('targetSdkVersion') ? rootProject.ext.targetSdkVersion : 33
@@ -45,7 +54,7 @@ android {
 repositories {
     google()
     mavenCentral()
-    maven { url 'https://jitpack.io' }
+    maven { url 'https://jitpack.io' } // Ensure JitPack is available for dependencies
 }
 
 
