--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,2 +1,19 @@
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }  // JitPack for resolving dependencies
+    }
+}
+
+dependencyResolutionManagement {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }  // Automatically resolve dependencies from JitPack
+    }
+}
+
+// Keep existing Capacitor Android inclusion
 include ':capacitor-android'
 project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/android/capacitor')
