--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,7 +12,7 @@ buildscript {
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.0.0'
+        classpath 'com.android.tools.build:gradle:8.7.2'
     }
 }
 
@@ -56,7 +56,7 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
-    implementation 'com.github.DantSu:ESCPOS-ThermalPrinter-Android:3.4.0'
+    implementation 'com.github.albgen:ESCPOS-ThermalPrinter-Android:3.4.7'
 }
 
 afterEvaluate {
