feat: Add ZXing core library for barcode processing.
- Add ZXing core library dependency for barcode processing.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
     api 'com.github.albgen:ESCPOS-ThermalPrinter-Android:3.4.11'
+    api 'com.google.zxing:core:3.4.0'
 }
 
 afterEvaluate {
